--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
+html{
+  margin: 0px;
+  box-sizing: border-box;
+  padding: 0px;
+}
 body {
-  margin: 0;
+  margin: 0px;
+  box-sizing: border-box;
+  padding: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background-color:#FEF9F4!important;
+   overflow: scroll!important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+input[type="date"]::-webkit-input-placeholder{
+  color: white;
+}
+a{
+  text-decoration: none!important;
+}
+input:focus,input:active,input:focus-visible,input:focus-within{
+  border: none!important;
+  outline: none!important;
+}
+.css-5lsacj-control:hover {
+  border-color: none!important;
 }
