--- a/src/assets/scss/elements/_emailaddress.scss
+++ b/src/assets/scss/elements/_emailaddress.scss
@@ -1,10 +1,10 @@
 .email-text{
-    font-size: var(--font-body-1);
+    font-size: var(--font-body-2);
     font-family: Montserrat;
-    color: #4F4949;
+    color: #5E626C;
 
 }
 .email-text:hover{
-    color: #4F4949;
-    font-size: var(--font-body-1);
+    color: var(--Active-Green-);
+    font-size: var(--font-body-2);
 }
