--- a/src/assets/scss/elements/_phonenumber.scss
+++ b/src/assets/scss/elements/_phonenumber.scss
@@ -1,10 +1,11 @@
 .phone-text{
-    font-size: var(--font-body-3);
     font-family: Montserrat;
-    color: #4F4949;
+    color: #5E626C;
+    font-size: var(--font-body-2);
 
 }
 .phone-text:hover{
     color: #4F4949;
-    font-size: var(--font-body-3);
+    font-size: var(--font-body-2);
+    color: var(--Active-Green-);
 }
