--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -75,7 +75,7 @@ STYLESHEET INDEXING
 // @import "elements/getQuoteFrom";
 @import "elements/sectionTitle";
 // @import "elements/map";
-// @import "elements/backToTop";
+@import "elements/backToTop";
 @import "elements/cardOne";
 @import "elements/cardTwo";
 @import "elements/cardThree";
