--- a/src/assets/scss/elements/_cardSix.scss
+++ b/src/assets/scss/elements/_cardSix.scss
@@ -21,3 +21,9 @@
         font-size: var(--font-body-3);
     }
 }
+@media only screen and (max-width: 479px) {
+    .cardSix {
+        padding:20px;
+
+    }
+}
