--- a/src/assets/scss/elements/_cardEight.scss
+++ b/src/assets/scss/elements/_cardEight.scss
@@ -19,3 +19,37 @@
     }
 
 }
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+    .cardEight {
+        &__title{
+            font-family: Montserrat-SemiBold;
+            color: #1C182B;
+            font-size:34px;
+            line-height: 46px;
+        }
+    
+    }
+}
+@media only screen and (max-width: 479px) {
+    .cardEight {
+        &__subtitle{
+            font-family: Montserrat;
+            color:#9CA5B1;
+            font-size: var(--font-body-3);
+        }
+    
+        &__title{
+            font-family: Montserrat-SemiBold;
+            color: #1C182B;
+            font-size: 26px;
+            line-height: 46px;
+        }
+        &__description{
+            font-family: Montserrat;
+            color: #5E626C;
+            line-height: 26px;
+            font-size: var(--font-body-3);
+        }
+    
+    }
+ }
