--- a/src/assets/scss/elements/_sectionTitle.scss
+++ b/src/assets/scss/elements/_sectionTitle.scss
@@ -22,7 +22,7 @@
 @media only screen and (max-width: 479px) {
     .section {
         &__title {
-            font-size: var(--h4) !important;
+            font-size: 26px;
         }
         &__description {
             padding: 0px;
@@ -45,7 +45,7 @@
 @media only screen and (min-width: 479px) and (max-width: 576px) {
     .section {
         &__title {
-            font-size: var(--h4) !important;
+            font-size: 26px;
         }
         &__description {
             padding: 15px;
@@ -61,7 +61,7 @@
 @media only screen and (min-width: 576px) and (max-width: 768px) {
     .section {
         &__title {
-            font-size: var(--h4) !important;
+            font-size: 34px;
         }
         &__description {
             padding: 15px;
