--- a/src/assets/scss/template/_home.scss
+++ b/src/assets/scss/template/_home.scss
@@ -102,6 +102,8 @@
    }
 }
 @media only screen and (min-width: 576px) and (max-width: 768px) {
+
+ 
 }
 @media only screen and (min-width: 479px) and (max-width: 576px) {
 }
@@ -115,6 +117,22 @@
          left: -30px;
          bottom: 17px;
       }
+   }
+}
+
+@media only screen and (max-width: 479px) {
+   .section-about {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+      padding-right: 15px;
+      &__logo {
+         left: -30px;
+         bottom: 17px;
+      }
+   }
+   .gird_image{
+      height: unset!important;
    }
 }
 /*-------------------------
@@ -123,30 +141,9 @@ Featured Works
 .gird_image{
    height: 460px;
 }
-@media only screen and (min-width: 576px) and (max-width: 768px) {
-   .gird_image{
-      height: unset!important;
-   }
-}
-@media only screen and (min-width: 479px) and (max-width: 576px) {
-   .gird_image{
-      height: unset!important;
-   }
-}
-@media only screen and (max-width: 479px) {
-   .section-about {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 20px;
-      padding-right: 15px;
-      &__logo {
-         left: -30px;
-         bottom: 17px;
-      }
-   }
-   .gird_image{
-      height: unset!important;
-   }
+.featured-section{
+   padding-top: 40px;
+   padding-bottom: 60px;
 }
 .fig-img{
    overflow: hidden;
@@ -158,7 +155,38 @@ Featured Works
 .fig-img img:hover{
    transform: scale(1.25);
 }
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+   .gird_image{
+      height: unset!important;
+   }
+   .featured-section{
+      padding-top: 20px;
+      padding-bottom: 30px;
+   }
+}
+@media only screen and (min-width: 479px) and (max-width: 576px) {
+   .featured-section{
+      padding-top: 20px;
+      padding-bottom: 30px;
+   }
+   .gird_image{
+      height: unset!important;
+   }
+}
+@media only screen and (max-width: 479px) {
+   .featured-section{
+      padding-top: 0px;
+      padding-bottom: 30px;
+   }
+}
 
+/*-------------------------
+Testimonials
+-------------------------*/
+.testimonials-section{
+   padding-top: 40px;
+   padding-bottom: 60px;
+}
 .section__testimonial{
    background: #EEF5E8;
 }
@@ -176,4 +204,14 @@ CTA
    padding-bottom: 10rem;
    border-radius: 5px;
 
+}
+@media only screen and (max-width: 479px) {
+   .cta-container{
+      padding: 10px!important;
+   
+   }
+
+   .cta-section{
+   margin: 5px;
+   }
 }
