--- a/src/assets/scss/template/_about.scss
+++ b/src/assets/scss/template/_about.scss
@@ -66,3 +66,20 @@
    
    }
 }
+/*-------------------------
+   TestimonailQuote 
+-------------------------*/
+.quotetitle{
+   font-family: Montserrat;
+   padding-top: 1rem;
+   padding-bottom: 1rem;
+   font-size: 28px;
+   color: #1C182B;
+   line-height: 36px;
+
+}
+.quotename{
+   font-family: Montserrat;
+   color: #9CA5B1;
+
+}
