--- a/src/assets/scss/elements/_cardThree.scss
+++ b/src/assets/scss/elements/_cardThree.scss
@@ -2,10 +2,25 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 5px rgba(35, 26, 77, 0.16);
     border-radius: 10px;
-
+    position: relative;
+    transition: all 1s;
+    overflow: hidden;
     padding: 40px;
     &__width{
         width: 100%;
+    }
+    &:hover &__title, &:hover &__description{
+        color: white;
+        position: relative;
+        z-index: 999;
+        cursor: pointer;
+    
+    }
+    &:hover .features-icons{
+        color: white;
+        position: relative;
+        z-index: 999;
+        cursor: pointer;
     }
     &__title{
         font-family: Montserrat-SemiBold;
@@ -20,6 +35,21 @@
         color: #5E626C;
         line-height: 20px;
         font-size: var(--font-body-3);
+    }
+    &::after {
+        content: '';
+        width: 100%;
+        position: absolute;
+        height: 100%;
+        left: 0;
+        top: 100%;
+        transition: all 0.3s;
+        background: linear-gradient(314.91deg, #246930 0%, #1ab700 98.64%) ;
+        border-radius: 0px 0px 10px 10px;
+    }
+    &:hover::after{
+        top: 0%;
+        cursor: pointer;
     }
 }
 
