Portfolio Page Started

--- a/src/assets/scss/elements/_backToTop.scss
+++ b/src/assets/scss/elements/_backToTop.scss
@@ -3,9 +3,9 @@
    right: 2%;
    bottom: 20px;
    z-index: 999;
-   background-color: #1AB700;
-   border-color: #1AB700;
+   background: linear-gradient(314.91deg, #246930 0%, #1ab700 98.64%);
    border-radius: 50%;
+   border-color: #1ab700;
    cursor: pointer;
    outline: none;
    padding-top: 13px;
