portfolio contact services page completed

--- a/src/assets/scss/elements/_global.scss
+++ b/src/assets/scss/elements/_global.scss
@@ -166,3 +166,9 @@ input::placeholder {
 .bg-color-change{
    background-color: #EEF5E8!important;
 }
+.hidden{
+   display: none;
+}
+.tab-active{
+   display: block;
+}
