--- a/src/assets/scss/elements/_sectionTitle.scss
+++ b/src/assets/scss/elements/_sectionTitle.scss
@@ -18,6 +18,7 @@
         font-size: var(--font-body-3);
         font-family: Montserrat;
         text-transform: uppercase;
+        line-height: 22px;
 
     }
 }
