--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -91,6 +91,8 @@ STYLESHEET INDEXING
 =========================================================================*/
 @import "template/home";
 @import "template/about";
+@import "template/portfolio";
+@import "template/contact";
 
 
 /*=======================================================================
