Working on Portfolio and Blog Detail Page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -92,6 +92,7 @@ STYLESHEET INDEXING
 @import "template/home";
 @import "template/about";
 @import "template/portfolio";
+@import "template/blog";
 @import "template/contact";
 
 
