--- a/src/assets/scss/template/_portfolio.scss
+++ b/src/assets/scss/template/_portfolio.scss
@@ -83,3 +83,31 @@
         font-size: var(--font-body-2);
     }
 }
+.portfolioreview-bg {
+    background-image: url("../../../../public/images/portfolio/Vector\ \(2\).png");
+    background-position: bottom;
+    background-size: cover;
+}
+
+.portfolioreview__section {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    &__custom_view {
+        font-family: Montserrat-Bold;
+        color: #1ab700;
+        font-size: var(--font-body-2);
+    }
+    &__custom_title {
+        color: #000000;
+        font-family: Montserrat-Bold;
+        font-size: var(--h2);
+        font-style: italic;
+    }
+}
+
+@media only screen and (max-width: 479px) {
+    .portfolioreview__section {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+}
