--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,9 @@ body {
   margin: 0px;
   box-sizing: border-box;
   padding: 0px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Montserrat!important;
+  -webkit-font-smoothing: Montserrat;
+  -moz-osx-font-smoothing: Montserrat;
    overflow-y: scroll!important;
 }
 
