Working Career Page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -84,6 +84,7 @@ STYLESHEET INDEXING
 @import "elements/cardSix";
 @import "elements/cardSeven";
 @import "elements/cardEight";
+@import "elements/jobCard";
 
 
 /*=======================================================================
@@ -94,6 +95,7 @@ STYLESHEET INDEXING
 @import "template/portfolio";
 @import "template/blog";
 @import "template/contact";
+@import "template/career";
 
 
 /*=======================================================================
